--- a/index.html
+++ b/index.html
@@ -19,13 +19,31 @@
                 <span class="orange">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network
             </h1>
             <p>
-                Imagine you don't need a diet because we provide
+                Imagine you don't need a diet because we provide <br>
                 healthy and delicious food for you!
             </p>
             <a class="anchor-tab" target="_blank" href="https://www.facebook.com/healthyfoodguide/">ORDER HERE</a>
         </div>
-        <div class="hlf-width">
+        <div class="hlf-width-img">
            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
+    <section class="MIDDLE-SEC">
+        <div class="hlf-width-img-2">
+            <img src="images/female/Person_Image-removebg-preview.png" alt="">
+        </div>
+        <div class="hlf-width-2">
+            <h2>About Me</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.
+            </p>
+            <a class="anchor-tab" target="_blank" href="https://specialistdoctorsbd.com/nutritionist-diet-specialist/">Contact me</a>
+            
         </div>
     </section>
 </body>
