--- a/index.html
+++ b/index.html
@@ -35,16 +35,49 @@
         </div>
         <div class="hlf-width-2">
             <h2>About Me</h2>
-            <p>
+            <p id="mid-para">
                 Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Condimentum diam orci pretium a pharetra,
                 feugiat cursus. Dictumst risus, sem egestas odio cras
                 adipiscing vulputate. Nisi, risus in suscipit non. Non
                 commodo volutpat, pharetra, vel.
             </p>
-            <a class="anchor-tab" target="_blank" href="https://specialistdoctorsbd.com/nutritionist-diet-specialist/">Contact me</a>
-            
+            <a class="anchor-tab" target="_blank" href="https://specialistdoctorsbd.com/nutritionist-diet-specialist/">Contact me</a>   
         </div>
     </section>
+
+
+    <section>
+        <div class="My-recipies">
+            <h2>My recipies</h2>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                Lorem Ipsum has been the industry's standard dummy text ever since the <br>
+                1500s.
+            </p>   
+        </div>
+       <div class="Recipie-Title">
+            <div class="Recipie-Title-1">
+                <img class="recipie-img" src="images/food/Project Cover5.png" alt="">
+                <h2>Recipie Title</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s.
+                </p>
+            </div>
+            <div class="Recipie-Title-2">
+                <img class="recipie-img" src="images/food/Project Cover7.png" alt="">
+                <h2>Recipie Title</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s.
+                </p>
+            </div>
+       </div>
+    </section>
+
+
 </body>
 </html>
