--- a/index.html
+++ b/index.html
@@ -77,6 +77,28 @@
             </div>
        </div>
     </section>
+        
+
+    <section class="fourth-sec">
+        <div>
+            <h2>700k</h2>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div>
+            <h2>2.5m</h2>
+            <p>Instagram Followers</p>
+        </div>
+        <div>
+            <h2>100k</h2>
+            <p>Dribbble Shot Likes</p>
+        </div>
+    </section>
+    
+
+    <footer>
+        <h3><span class="orange">Eat</span> Fresh</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 
 
 </body>
